# dopbvh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README
cmake/toolchain/: clang.cmake
data/: benchmark.toml  imgui.ini  scene.toml
data/scene/: tree.fbx
data/scene/camera/: camera_bext  camera_bint  camera_chestnut  camera_crown  camera_hairball  camera_pplant  camera_sheep  camera_sm
data/shaders/: aabb_heat_map.frag  aabb_heat_map.frag.spv  aabb_stencil.frag.spv  aabb_stencil.vert  aabb_stencil.vert.spv  aabb_wireframe.frag  aabb_wireframe.frag.spv  aabb_wireframe.vert  aabb_wireframe.vert.spv  bv_aabb.glsl  bv_aabb_data.glsl  bv_dop14.glsl  bv_obb.glsl  bvh_compressed_binary.glsl  compileAll.py  data_bvh.h  data_plocpp.h  data_scene.h  data_types_general.glsl  fullscreen.vert  fullscreen.vert.spv  gen_collapse_aabb.comp  gen_collapse_aabb.comp.spv  gen_collapse_dop14.comp  gen_collapse_dop14.comp.spv  gen_collapse_obb.comp  gen_collapse_obb.comp.spv  gen_compress_aabb.comp  gen_compress_aabb.comp.spv  gen_compress_dop14_split.comp  gen_compress_dop14_split.comp.spv  gen_compress_dop14_standard.comp  gen_compress_dop14_standard.comp.spv  gen_compress_obb.comp  gen_compress_obb.comp.spv  gen_plocpp_CopyClusterIDs.comp  gen_plocpp_CopyClusterIDs.comp.spv  gen_plocpp_aabb_InitialClusters.comp  gen_plocpp_aabb_InitialClusters.comp.spv  gen_plocpp_aabb_PLOCpp.comp  (+83 more)
src/: CMakeLists.txt
src/dopbvh/: Application.cpp  Application.h  ApplicationState.h  Application_imGUI.cpp  CMakeLists.txt  main.cpp
src/dopbvh/backend/: Config.h  RenderUtil.h  Stats.h
src/dopbvh/backend/data/: Input.h
src/dopbvh/backend/vulkan/: MyCapabilities.h  RadixSort.h  Task.h  VCtx.h  Vulkan.cpp  Vulkan.h  VulkanState.h
src/dopbvh/backend/vulkan/data/: AccelerationStructure.h  BvhBinary.h  DeviceData.h  ImGuiScene.h  Scene.h
src/dopbvh/backend/vulkan/data/handler/: Geometry.h  Texture.h
src/dopbvh/backend/vulkan/workload/: AabbDebugView.h  ImGui.h  RayTracingKHR.h  VertexLayout.h
src/dopbvh/backend/vulkan/workload/bvh/: Collapsing.cpp  Collapsing.h  Compression.cpp  Compression.h  PLOCpp.cpp  PLOCpp.h  Stats.cpp  Stats.h  Tracer.cpp  Tracer.h  Transformation.cpp  Transformation.h  Types.h
src/dopbvh/core/: Config.cpp  Config.h  GUI.h  Taskflow.h
src/dopbvh/image/: Writer.cpp  Writer.h
src/dopbvh/module/: Benchmark.cpp  Benchmark.h  Benchmark_imGUI.cpp  CameraManager.cpp  CameraManager.h  CameraManager_imGUI.cpp  SceneRenderer.h  SceneRenderer_imGUI.cpp
src/dopbvh/scene/: Camera.h  Scene.h  SceneIO.h  Serialization.cpp  Serialization.h
src/dopbvh/util/: GUIUtil.h  pexec.h  stb_image_write.h
support/: CMakeLists.txt
support/berries/: .gitignore  CMakeLists.txt
support/berries/cmake/: berries.pc.in  berriesBuildConfig.cmake.in  berriesConfig.cmake.in
support/berries/include/berries/lib_helper/: glfw.h  spdlog.h
support/berries/include/berries/util/: UidUtil.h  types.h  uid.h
support/lime/: CMakeLists.txt
support/lime/include/vLime/: Capability.h  CommandPool.h  Compute.h  DebugUtils.h  ExtensionsAndLayers.h  Flags.h  Frame.h  Memory.h  PipelineBuilder.h  Platform.h  Queues.h  Reflection.h  RenderGraph.h  SwapChain.h  Timestamp.h  Transfer.h  Util.h  UtilImage.h  Vulkan.h  types.h  vLime.h
support/lime/src/: Capability.cpp  DebugMessenger.cpp  DebugMessenger.h  PhysicalDevice.h  Reflection.cpp  Util.cpp  vLime.cpp
support/lime/tests/: Memory.cpp
